--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^10.17.60",
     "globby": "^10.0.2",
     "rimraf": "^3.0.2",
+    "semantic-release": "^18.0.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.10"
   },
