--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,5 @@ jobs:
     steps:
       - checkout
       - run:
-          name: build
-          command: npm run build
-      - run:
           name: semantic release
-          command: npm run release
+          command: npm i semantic-release@18 @semantic-release/exec@6 && npx semantic-release || true
