--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@types/node": "^10.17.60",
         "globby": "^10.0.2",
         "rimraf": "^3.0.2",
-        "semantic-release": "^18.0.1",
         "ts-node": "^8.10.2",
         "typescript": "^3.9.10"
     },
@@ -26,7 +25,6 @@
     "files": [
         "/bin",
         "/lib",
-        "/npm-shrinkwrap.json",
         "/oclif.manifest.json"
     ],
     "license": "MIT",
@@ -42,10 +40,8 @@
     "scripts": {
         "postpack": "rimraf oclif.manifest.json",
         "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-        "test": "echo NO TESTS",
         "version": "oclif-dev readme && git add README.md",
-        "build": "npm i && tsc -b",
-        "release": "semantic-release || true"
+        "build": "npm i && tsc -b"
     },
     "types": "lib/index.d.ts",
     "dependencies": {
