--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "postpack": "rimraf oclif.manifest.json",
         "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
         "version": "oclif-dev readme && git add README.md",
-        "build": "npm i && tsc -b"
+        "build": "npm i && tsc -b",
+        "watch": "tsc -b --watch"
     },
     "types": "lib/index.d.ts",
     "dependencies": {
