--- a/package.json
+++ b/package.json
@@ -38,11 +38,9 @@
         ]
     },
     "scripts": {
-        "postpack": "rimraf oclif.manifest.json",
-        "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-        "version": "oclif-dev readme && git add README.md",
-        "build": "npm i && tsc -b",
-        "watch": "tsc -b --watch"
+        "build": "rimraf lib && npm i && tsc -b",
+        "watch": "tsc -b --watch",
+        "update:readme": "oclif-dev manifest && oclif-dev readme && rimraf oclif.manifest.json"
     },
     "types": "lib/index.d.ts",
     "dependencies": {
