--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "scripts": {
         "build": "rimraf lib && npm i && tsc -b",
         "watch": "tsc -b --watch",
-        "update:readme": "oclif-dev manifest && oclif-dev readme && rimraf oclif.manifest.json"
+        "update:readme": "oclif-dev readme"
     },
     "types": "lib/index.d.ts",
     "dependencies": {
