--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "types": "lib/index.d.ts",
     "devDependencies": {
         "@oclif/dev-cli": "^1.26.8",
-        "@types/execa": "^2.0.0",
         "@types/inquirer": "^8.1.3",
         "@types/listr": "^0.14.4",
         "@types/node": "^10.17.60",
@@ -43,10 +42,11 @@
         "typescript": "^3.9.10"
     },
     "dependencies": {
-        "@master/text-template": "^1.0.0",
+        "@master/text-template": "^1.0.2",
         "@oclif/command": "^1.8.9",
         "@oclif/config": "^1.18.2",
         "@oclif/plugin-help": "^3.2.14",
+        "execa": "^5.1.1",
         "inquirer": "^8.2.0",
         "listr": "^0.14.3",
         "readjson": "^2.2.2",
