--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/master-style/cli.git"
+        "url": "https://github.com/master-co/cli.git"
     },
     "files": [
         "/bin",
