--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "scripts": {
         "build": "rimraf lib && npm i && tsc -b",
         "watch": "tsc -b --watch",
-        "update:readme": "oclif-dev readme"
+        "update:readme": "oclif-dev readme",
+        "lock": "pnpm dlx npm i --package-lock-only"
     },
     "types": "lib/index.d.ts",
     "devDependencies": {
@@ -45,6 +46,8 @@
         "@master/text-template": "^1.0.3",
         "@oclif/command": "^1.8.9",
         "@oclif/config": "^1.18.2",
+        "@oclif/errors": "^1.3.5",
+        "@oclif/help": "^1.0.1",
         "@oclif/plugin-help": "^3.2.14",
         "execa": "^5.1.1",
         "inquirer": "^8.2.0",
